src/w3c_vc/model/snapshots/credibil_vc__w3c_vc__model__types__tests__language_string_serialization.snap
---
source: src/w3c_vc/model/types.rs
assertion_line: 180
expression: hydrated
---
name:
  "@value": Alice
  "@language": en
description:
  - "@value": "HTML and CSS: Designing and Creating Websites"
    "@language": en
  - "@value": "HTML و CSS: تصميم و إنشاء مواقع الويب"
    "@language": ar
    "@direction": rtl
other: Just a string
