src/w3c_vc/model/snapshots/credibil_vc__w3c_vc__model__types__tests__language_string_serialization_json.snap
---
source: src/w3c_vc/model/types.rs
assertion_line: 184
expression: serialized
---
description:
  - "@language": en
    "@value": "HTML and CSS: Designing and Creating Websites"
  - "@direction": rtl
    "@language": ar
    "@value": "HTML و CSS: تصميم و إنشاء مواقع الويب"
name:
  "@language": en
  "@value": Alice
other: Just a string
